--- a/Home-Pagina/Index.html
+++ b/Home-Pagina/Index.html
@@ -13,7 +13,7 @@
 </header>
 <nav>
     <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="AlleHtmlOpdrachten.html">HTML</a></li>
         <li><a href="AlleJavascriptOpdrachten.html">Javascript</a></li>
         <li><a href="">Bootstrap</a></li>
