--- a/Home-Pagina/AlleHtmlOpdrachten.html
+++ b/Home-Pagina/AlleHtmlOpdrachten.html
@@ -7,7 +7,7 @@
 <body>
 <nav>
     <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="AlleHtmlOpdrachten.html">HTML</a></li>
         <li><a href="AlleJavascriptOpdrachten.html">Javascript</a></li>
         <li><a href="">Bootstrap</a></li>
