--- a/Home-Pagina/AlleJavascriptOpdrachten.html
+++ b/Home-Pagina/AlleJavascriptOpdrachten.html
@@ -8,7 +8,7 @@
 <body>
 <nav>
     <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="AlleHtmlOpdrachten.html">HTML</a></li>
         <li><a href="AlleJavascriptOpdrachten.html">Javascript</a></li>
         <li><a href="">Bootstrap</a></li>
