--- a/Home-Pagina/AlleJavascriptOpdrachten.html
+++ b/Home-Pagina/AlleJavascriptOpdrachten.html
@@ -25,7 +25,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about">Over mezelf</a></li>
+                <li><a href="mezelf.html">Over mezelf</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div><!--/.nav-collapse -->
@@ -41,7 +41,7 @@
 </div>
 
 <div class="container">
-    <!-- Example row of columns -->
+    <!--  rij van colummen -->
     <div class="row-2">
         <div class="col-md-2">
             <h2>Opdracht javascript basis</h2>
