--- a/Home-Pagina/dinges.html
+++ b/Home-Pagina/dinges.html
@@ -25,8 +25,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="mezelf.html">Over mezelf</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">Over mezelf</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div><!--/.nav-collapse -->
@@ -37,22 +37,22 @@
 <div class="jumbotron justify-center">
     <div class="container">
         <h1>Hallo, bezoeker!</h1>
-        <p>Mijn maker  had me eerst voor een betere overzicht op zijn schoolopdrachten gemaakt zodat hij niets kon kwijtraken, en zodat hij elke keer mijn link kon versturen om het in te leveren.<br> Nu ben ik ook geschikt als portofolio</p>
-        <a class="btn btn-primary btn-lg" href="CVvanGeranoBekskopie.pdf" role="button">Mijn CV &raquo;</a>
+        <p>Mijn maker had had me eerst voor een betere overzicht op zijn schoolopdrachten gemaakt zodat hij niets kon kwijtraken, en zodat hij elke keer mijn link kon versturen om het in te leveren.<br> Nu ben ik ook geschikt als portofolio</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Mijn CV &raquo;</a></p>
     </div>
 </div>
 
 <div class="container">
-    <!-- rij van colummen -->
+    <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-3">
             <h2>HTML</h2>
-            <p> HTML is de eerste waarmee we op school te werk mee gingen  en we hebben gevarieerde en gecombineerde opdrachten ermee uitgevoerd</p>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default" href="AlleHtmlOpdrachten.html" role="button">Opdrachten &raquo;</a></p>
         </div>
         <div class="col-md-3">
             <h2>Javascript</h2>
-            <p>met javascript hebben we zowel </p>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-default" href="AlleJavascriptOpdrachten.html" role="button">Opdrachten &raquo;</a></p>
         </div>
         <div class="col-md-3">
