--- a/Home-Pagina/mezelf.html
+++ b/Home-Pagina/mezelf.html
@@ -8,9 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Portofolio Gerano beks</title>
+    <title>Personalia</title>
 </head>
-
 <body>
 <style>
     body {
@@ -26,48 +25,43 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="mezelf.html">Over mezelf</a></li>
+                <li><a href="mezelf.html">over mezelf</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron justify-center">
-    <div class="container">
-        <h1>Hallo, bezoeker!</h1>
-        <p>Mijn maker  had me eerst voor een betere overzicht op zijn schoolopdrachten gemaakt zodat hij niets kon kwijtraken, en zodat hij elke keer mijn link kon versturen om het in te leveren.<br> Nu ben ik ook geschikt als portofolio</p>
-        <a class="btn btn-primary btn-lg" href="CVvanGeranoBekskopie.pdf" role="button">Mijn CV &raquo;</a>
-    </div>
+<strong><h2>Personalia</h2></strong><hr>
+<figure>
+<img class="img-fluid rounded-circle float-left m-3" src="profielfoto.png" style="height: 125px; width: 125px;">
+<figcaption>
+    <h3>Mijn naam is gerano beks en ik ben <em>19</em> jaar. </h3>
+</figcaption>
+</figure>
+<p>
+29 augustus 2017 was ik begonnen met de opleiding Aplicatie -en mediabeheerder.
+de grootste reden voor mijn keuze is omdat ik als sinds kleins afs aan iets met techniek wou gaan doen.
+</p>
 </div>
 
-<div class="container">
-    <!-- rij van colummen -->
-    <div class="row">
-        <div class="col-md-3">
-            <h2>HTML</h2>
-            <p> HTML is de eerste waarmee we op school te werk mee gingen  en we hebben gevarieerde en gecombineerde opdrachten ermee uitgevoerd</p>
-            <p><a class="btn btn-default" href="AlleHtmlOpdrachten.html" role="button">Opdrachten &raquo;</a></p>
-        </div>
-        <div class="col-md-3">
-            <h2>Javascript</h2>
-            <p>met javascript hebben we zowel </p>
-            <p><a class="btn btn-default" href="AlleJavascriptOpdrachten.html" role="button">Opdrachten &raquo;</a></p>
-        </div>
-        <div class="col-md-3">
-            <h2>Bootstrap</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-default" href="#" role="button">Opdrachten &raquo;</a></p>
-        </div>
-    </div>
+<section style="padding-top: 10px; padding-bottom: 20px; padding-left: 30px" >
+<h3>hobby's</h3>
+<li>calisthenics: calisthenics is een sport waar er spierkracht en balans vereist wordt en het wordt getraind door je eigen lichaamsgewicht te gebruiken</li>
+<li>conditietraining: als ik de tijd er voor heb dan ga ik naar buiten om mijn conditie te verbeteren door hardlopen   </li>
+</section>
 
-    <hr>
+<section style="padding-top: 10px; padding-bottom: 20px; padding-left: 30px">
+<h3>Doelen</h3>
+    <p>Mijn eerste doel is me vaardigheden te verbeteren zodat ik webshops kan creëren.<br>
+       Ik ben ook van plan om een HBO opleiding te doen als ik mijn MBO heb afgerond</p>
+</section>
 
-    <footer>
-        <p>&copy; 2018 Company, Inc.</p>
-    </footer>
-</div> <!-- /container -->
+<hr>
+<footer class="container">
+    <p>&copy; 2018 Company, Inc.</p>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
