iets nieuws aan het proberen

--- a/Home-Pagina/portofolio.html
+++ b/Home-Pagina/portofolio.html
@@ -12,13 +12,21 @@
     <h1>
         Gerano Beks
     </h1>
-    <h5>
-        AplicatieOntwikkelaar
-    </h5>
+    <h3>
+        Aplicatie-Ontwikkelaar
+    </h3>
     <p>
-        29 augustus 2017 was ik begonnen met de opleiding Aplicatie -en mediabeheerder.
+       Ik ben gerano Beks en 29 augustus 2017 was ik begonnen met de opleiding Aplicatie -en mediabeheerder.
     </p>
+    <h5>Leerdoelen</h5>
+    <p>Mijn eerste doel is me vaardigheden te verbeteren zodat ik webshops kan creëren.<br>
+        Nadat ik dat onder de knieën heb wil ik graag te werk gaan met swift zodat ik apps kan maken
+    </p>
+    <h5>Hobby's</h5>
+    <p>Als ik in mijn vrije tijd niet bezig ben met werken, dan ga ik het liefst sporten zodat ik fit blijf</p>
+
     <button><a href="CVvanGeranoBekskopie.pdf"> Mijn CV</a></button>
 </div>
 </body>
 </html>
+
