iets nieuws aan het proberen

--- a/Home-Pagina/portfolio.html
+++ b/Home-Pagina/portfolio.html
@@ -23,7 +23,7 @@
         Nadat ik dat onder de knieën heb wil ik graag te werk gaan met swift zodat ik apps kan maken
     </p>
     <h5>Hobby's</h5>
-    <p>Als ik in mijn vrije tijd niet bezig ben met werken, dan ga ik het liefst sporten zodat ik fit blijf</p>
+    <p>Als ik in mijn vrije tijd niet aan het werk ben, dan ga ik het liefst sporten zodat ik fit blijf</p>
 
     <button><a href="CVvanGeranoBekskopie.pdf"> Mijn CV</a></button>
 </div>
