iets nieuws aan het proberen

--- a/Home-Pagina/portfolio.html
+++ b/Home-Pagina/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" integrity="sha384-kW+oWsYx3YpxvjtZjFXqazFpA7UP/MbiY4jvs+RWZo2+N94PFZ36T6TFkc9O3qoB" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="portfolio.css">
     <title>Welkom</title>
 </head>
@@ -13,19 +13,20 @@
         Gerano Beks
     </h1>
     <h3>
-        Aplicatie-Ontwikkelaar
+        Applicatieontwikkelaar
     </h3>
     <p>
-       Ik ben gerano Beks en 29 augustus 2017 was ik begonnen met de opleiding Aplicatie-en mediabeheerder.
+       Ik ben Gerano Beks. Op 29 augustus 2017 ben ik begonnen met de opleiding Aplicatie-en mediaontwikkelaar.
     </p>
     <h5>Leerdoelen</h5>
-    <p>Mijn eerste doel is me vaardigheden te verbeteren zodat ik webshops kan creëren.<br>
-        Nadat ik dat onder de knieën heb wil ik graag te werk gaan met swift zodat ik apps kan maken
+    <p>Mijn eerste doel is mijn vaardigheden te verbeteren zodat ik webshops kan creëren.<br>
+        Nadat ik dat onder de knie heb, wil ik graag te werk gaan met Swift zodat ik apps kan maken voor het Apple platform
     </p>
     <h5>Hobby's</h5>
-    <p>Als ik in mijn vrije tijd niet aan het werk ben, dan ga ik het liefst sporten zodat ik fit blijf</p>
-
-    <button><a href="CVvanGeranoBekskopie.pdf"> Mijn CV</a></button>
+    <p>Als ik in mijn vrije tijd niet aan het werk ben, ga ik het liefst sporten zodat ik fit blijf zoals calisthenics en hardlopen</p>
+    <ul>
+        <li><a href="CVvanGeranoBekskopie.pdf"><i class="fas fa-file-pdf"></i></a></li>
+    </ul>
 </div>
 </body>
 </html>
